fix deserializzazione json